Adição do Header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Plataforma para divulgação de adoção de Pets e divulgação de Pets perdidos">
     <title>PetFinderProject</title>
 </head>
 <body>
-    <h1>The Pet Finder Project</h1>
+    <header>
+        <img src="" alt="">
+        <nav>
+            <a href="">Quem Somos</a>
+            <a href="">Quero Adotar</a>
+            <a href="">Quero Ajudar</a>
+            <a href="">Parcerias</a>
+            <!-- To Do - Botton Entrar/Cadastrar-se (popup)-->
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+
+    </footer>
 </body>
 </html>
