--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img src="Imagens\Logo_2.png" alt="Logo Pet Finder">
         <nav>
             <a href="">Quem Somos</a>
             <a href="">Quero Adotar</a>
