--- a/index.html
+++ b/index.html
@@ -19,6 +19,41 @@
     </header>
 
     <main>
+        <h1>Encontre seu novo Pet</h1>
+        <section>
+            <div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Todas as Espécies</a></li>
+                    <ul class="dropdpwn-submenu">
+                        <li><a href="#">Cachorro</a></li>
+                        <li><a href="#">Gato</a></li>
+                    </ul>
+                    <li><a href="#">Todas os sexos</a></li>
+                    <ul class="dropdpwn-submenu">
+                        <li><a href="#">Macho</a></li>
+                        <li><a href="#">Fêmea</a></li>
+                    </ul>
+                    <li><a href="#">Todas os portes</a></li>
+                    <ul class="dropdpwn-submenu">
+                        <li><a href="#">Pequeno</a></li>
+                        <li><a href="#">Médio</a></li>
+                        <li><a href="#">Grande</a></li>
+                    </ul>
+                    <li><a href="#">Todas as cidades</a></li>
+                    <ul class="dropdpwn-submenu">
+                        <li><a href="#">Assis</a></li>
+                        <li><a href="#">Paraguaçu</a></li>
+                        <li><a href="#">Quatá</a></li>
+                        <li><a href="#">Borá</a></li>
+                    </ul>
+                </ul>
+                <button>Buscar</button>
+            </div>
+        </section>
+
+        <section>
+
+        </section>
 
     </main>
 
