Criação da estrutura dos botões entrar/cadastrar-se do header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <a href="">Quero Adotar</a>
             <a href="">Quero Ajudar</a>
             <a href="">Parcerias</a>
-            <!-- To Do - Botton Entrar/Cadastrar-se (popup)-->
+            <a href="">Entrar</a>
+            <button>Cadastrar-se</button>
         </nav>
     </header>
 
