--- a/index.html
+++ b/index.html
@@ -74,7 +74,19 @@
     </main>
 
     <footer>
+        <h3>Colabore
+            <a href="">Doe qualquer valor</a>
+            <a href="">Seja menbro do abrigo</a>
+            <a href="">Compre nas lojas Parceiras</a>
+        </h3>
+        <h3>Divulgue um Pet
+            <a href="">Cadastrar Pet</a>
+        </h3>
+        <a href=""><img src="Imagens\icons8-instagram.svg" alt="Logo Instagram"></a>
+        <a href=""><img src="Imagens\icons8-facebook.svg" alt="Logo Facebook"></a>
+        <a href=""><img src="Imagens\icons8-reproduzir-youtube.svg" alt="Logo Youtube"></a>
 
+        
 
     </footer>
 </body>
