--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <title>PetFinderProject</title>
 </head>
 <body>
-    <header>
-        <img src="Imagens\Logo_2.png" alt="Logo Pet Finder">
-        <nav>
-            <a href="">Quem Somos</a>
-            <a href="">Quero Adotar</a>
-            <a href="">Quero Ajudar</a>
-            <a href="">Parcerias</a>
-            <a href="">Entrar</a>
+    <header class="cabecalho">
+        <img class="cabecalho-logo" src="Imagens\Logo_2.png" alt="Logo Pet Finder">
+        <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-item" href="">Quem Somos</a>
+            <a class="cabecalho-menu-item" href="">Quero Adotar</a>
+            <a class="cabecalho-menu-item" href="">Quero Ajudar</a>
+            <a class="cabecalho-menu-item" href="">Parcerias</a>
+            <a class="cabecalho-menu-item" href="">Entrar</a>
             <button>Cadastrar-se</button>
         </nav>
     </header>
 
-    <main>
+    <main class="conteudo">
         <h1>Encontre seu novo Pet</h1>
-        <section>
-            <div>
+        <section class="conteudo-dropdown">
+            <div class="dropdown">
                 <ul class="dropdown-menu">
                     <li><a href="#">Todas as Espécies</a></li>
                     <ul class="dropdpwn-submenu">
@@ -73,21 +73,18 @@
 
     </main>
 
-    <footer>
-        <h3>Colabore
-            <a href="">Doe qualquer valor</a>
-            <a href="">Seja menbro do abrigo</a>
-            <a href="">Compre nas lojas Parceiras</a>
+    <footer class="rodape">
+        <h3 class="rodape-item">Colabore
+            <a class="rodape-subitem" href="">Doe qualquer valor</a>
+            <a class="rodape-subitem" href="">Seja menbro do abrigo</a>
+            <a class="rodape-subitem" href="">Compre nas lojas Parceiras</a>
         </h3>
-        <h3>Divulgue um Pet
-            <a href="">Cadastrar Pet</a>
+        <h3 class="rodape-item">Divulgue um Pet
+            <a class="rodape-subitem" href="">Cadastrar Pet</a>
         </h3>
-        <a href=""><img src="Imagens\icons8-instagram.svg" alt="Logo Instagram"></a>
-        <a href=""><img src="Imagens\icons8-facebook.svg" alt="Logo Facebook"></a>
-        <a href=""><img src="Imagens\icons8-reproduzir-youtube.svg" alt="Logo Youtube"></a>
-
-        
-
+        <a class="logo-rodape" href=""><img src="Imagens\icons8-instagram.svg" alt="Logo Instagram"></a>
+        <a class="logo-rodape" href=""><img src="Imagens\icons8-facebook.svg" alt="Logo Facebook"></a>
+        <a class="logo-rodape" href=""><img src="Imagens\icons8-reproduzir-youtube.svg" alt="Logo Youtube"></a>
     </footer>
 </body>
 </html>
