--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plataforma para divulgação de adoção de Pets e divulgação de Pets perdidos">
     <title>PetFinderProject</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
