Remoção do dropdown e adição do select, para navegação dos itens de busca

--- a/index.html
+++ b/index.html
@@ -21,34 +21,33 @@
     </header>
 
     <main class="conteudo">
-        <h1>Encontre seu novo Pet</h1>
-        <section class="conteudo-dropdown">
-            <div class="dropdown">
-                <ul class="dropdown-menu">
-                    <li><a href="#">Todas as Espécies</a></li>
-                    <ul class="dropdpwn-submenu">
-                        <li><a href="#">Cachorro</a></li>
-                        <li><a href="#">Gato</a></li>
-                    </ul>
-                    <li><a href="#">Todas os sexos</a></li>
-                    <ul class="dropdpwn-submenu">
-                        <li><a href="#">Macho</a></li>
-                        <li><a href="#">Fêmea</a></li>
-                    </ul>
-                    <li><a href="#">Todas os portes</a></li>
-                    <ul class="dropdpwn-submenu">
-                        <li><a href="#">Pequeno</a></li>
-                        <li><a href="#">Médio</a></li>
-                        <li><a href="#">Grande</a></li>
-                    </ul>
-                    <li><a href="#">Todas as cidades</a></li>
-                    <ul class="dropdpwn-submenu">
-                        <li><a href="#">Assis</a></li>
-                        <li><a href="#">Paraguaçu</a></li>
-                        <li><a href="#">Quatá</a></li>
-                        <li><a href="#">Borá</a></li>
-                    </ul>
-                </ul>
+        <h1 class="conteudo-titulo">Encontre seu novo Pet</h1>
+        <section class="conteudo-select">
+            <div class="select">
+                <select name="Todas as espécies" id="espécies">
+                    <option value="opcoes">Todas as espécies</option>
+                    <option value="Cachorro">Cachorro</option>
+                    <option value="Gato">Gato</option>
+                </select>
+                <select name="Todas os sexos" id="sexos">
+                    <option value="opcoes">Todas os sexos</option>
+                    <option value="Macho">Macho</option>
+                    <option value="Fêmea">Fêmea</option>
+                </select>
+                <select name="Todas os portes" id="portes">
+                    <option value="opcoes">Todas os portes</option>
+                    <option value="Pequeno">Pequeno</option>
+                    <option value="Médio">Médio</option>
+                    <option value="Grande">Grande</option>
+                </select>
+                
+                <select name="Todas as Cidades" id="cidades">
+                    <option value="opcoes">Todas as Cidades</option>
+                    <option value="Assis">Assis</option>
+                    <option value="Paraguaçu">Paraguaçu</option>
+                    <option value="Quatá">Quatá</option>
+                    <option value="Borá">Borá</option>
+                </select>
                 <button>Buscar</button>
             </div>
         </section>
